# Nyx

./: .bash_profile  .bashrc  .ghci  .gitattributes  .gitconfig  .gitignore.global  .gitmodules  .profile  .stowrc  .vimrc  AGENTS.md  Makefile  README.md  config.org  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  packages.txt  stylix.nix
.bin/: .editorconfig  __base__  audioswitch  background  bin  brightness  caffeinatestatus  caffeine  cc  cht  disable-lock  dmenu-audio  dmenu-background  dmenu-bg  dmenu-capture  dmenu-clipboard  dmenu-color  dmenu-displays  dmenu-files  dmenu-font  dmenu-music  dmenu-picker  dmenu-record  dmenu-run  dmenu-services  dmenu-sessions  dmenu-system  dmenu-systemd  dmenu-tmux  dmenu-toolbox  dmenu-wall  do  extr  fine  fo  fonts  fr  fugitive  fugitive-gbrowse  fw  (+55 more)
.config/: mimeapps.list  okularpartrc  rofi-rbw.rc  rofimoji.rc
.config/alacritty/: .gitignore  alacritty.toml  main.toml
.config/beets/: .gitignore  config.yaml  library.db  state.pickle
.config/betterlockscreen/: betterlockscreenrc
.config/doom/: config.el  init.el  packages.el
.config/dunst/: dunstrc
.config/emacs/: early-init.el  init.el
.config/fastfetch/: config.jsonc
.config/feh/: keys
.config/fish/: .gitignore  config.fish  fish_plugins
.config/ghostty/: .gitignore  config
.config/git/: config
.config/i3/: config
.config/i3status/: config
.config/kew/: .gitignore  kewrc
.config/nvim/: .gitignore  .luacheckrc  .luarc.json  .stylua.toml  filetype.lua  init.lua  lazy-lock.json  nvim-pack-lock.json  package-lock.json
.config/opencode/: opencode.json
.config/presenterm/: config.yaml
.config/qutebrowser/: .gitignore  config.py  pyproject.toml
.config/qutebrowser/bookmarks/: urls
.config/qutebrowser/modules/: colors.py  interceptors.py  utils.py
.config/qutebrowser/userscripts/: qute-rbw  qute-rbw-picker
.config/rmpc/: config.ron
.config/sesh/: sesh.toml
.config/tmux/: .editorconfig  tmux.conf
.config/xmobar/: flake.nix  fourmolu.yaml  xmobar-nyx.cabal  xmobarrc
.config/xmobar/lib/XMobar/Custom/Layout/: Base.hs  Bottom.hs  Top.hs
.config/xmobar/src/: Main.hs
.config/xmonad/: .gitignore  Makefile  flake.nix  fourmolu.yaml  xmonad-nyx.cabal  xmonad.hs
.config/xmonad/lib/XMonad/Custom/: Bindings.hs  Config.hs  Misc.hs  MouseBindings.hs  Navigation.hs  Prompt.hs  Scratchpads.hs  Search.hs  Theme.hs  Workspaces.hs
.config/xmonad/lib/XMonad/Custom/Actions/: ApplicationChooser.hs  Calculator.hs  DoActions.hs  DoPrompt.hs  JumpWorkspaces.hs  Keyboard.hs  LayoutChooser.hs  Minimize.hs  RecentWindows.hs  RecentWorkspaces.hs  ScratchpadChooser.hs  TmuxPrompt.hs
.config/xmonad/lib/XMonad/Custom/Actions/Screen/: Screencast.hs  Screenshot.hs
.config/xmonad/lib/XMonad/Custom/Hooks/: Event.hs  KeyboardChangeEvent.hs  Layout.hs  Log.hs  Screens.hs  Startup.hs  Statusbar.hs  XMobar.hs
.config/xmonad/lib/XMonad/Custom/Manage/: ManageHelpers.hs  ManageHook.hs
.config/xmonad/lib/XMonad/Custom/Prompt/: FuzzyMatch.hs
.config/xmonad/lib/XMonad/Custom/Utils/: ChordKeys.hs  Keyboard.hs  Loggers.hs  Strings.hs
.config/xmonad/scripts/: volume
.config/xmonad/src/: Main.hs
.config/xmonad/xmobarrc/: bot.hs  top.hs
.config/zathura/: .gitignore  colors  zathurarc
.config/zed/: keymap.json  settings.json
.emacs.d/: .gitignore  README.org  config.org  early-init.el  init.el  prot-emacs.org
.emacs.d/minimal-emacs-modules/: minimal-emacs-completion.el  minimal-emacs-dired.el  minimal-emacs-doric-themes.el  minimal-emacs-ef-themes.el  minimal-emacs-email.el  minimal-emacs-essentials.el  minimal-emacs-gnus.el  minimal-emacs-icons.el  minimal-emacs-mu4e.el  minimal-emacs-notmuch.el  minimal-emacs-solarized-themes.el  minimal-emacs-theme.el  minimal-emacs-which-key.el
.emacs.d/minimal-lisp/: minimal-abbrev.el  minimal-comment.el  minimal-common.el  minimal-dired.el  minimal-ediff.el  minimal-elisp.el  minimal-eww.el  minimal-lisp-icons.el  minimal-minibuffer.el  minimal-modeline.el  minimal-notmuch.el  minimal-org.el  minimal-pair.el  minimal-prefix.el  minimal-project.el  minimal-register.el  minimal-scratch.el  minimal-search.el  minimal-shell.el  minimal-simple.el  minimal-spell.el  minimal-vertico.el  minimal-window.el
.emacs.d/minimal-modules/: minimal-emacs-completion.el  minimal-emacs-essentials.el  minimal-emacs-git.el  minimal-emacs-langs.el  minimal-emacs-mct.el  minimal-emacs-modeline.el  minimal-emacs-modus-themes.el  minimal-emacs-org.el  minimal-emacs-search.el  minimal-emacs-standard-themes.el  minimal-emacs-theme.el  minimal-emacs-vertico.el  minimal-emacs-web.el  minimal-emacs-window.el  minimal-modules-colors.el  minimal-modules-intro.el  minimal-modules-transparency.el
.emacs.d/prot-emacs-modules/: prot-emacs-completion.el  prot-emacs-dired.el  prot-emacs-doom-themes.el  prot-emacs-essentials.el  prot-emacs-git.el  prot-emacs-langs.el  prot-emacs-org.el  prot-emacs-solarized-themes.el  prot-emacs-theme.el
.highlight/: .gitignore
.highlight/themes/: solarized-dark.theme  solarized-light.theme
.pandoc/: md2pdf_filter.lua
.scripts/: ae  background  battery  gr  md2pdf  md2tex  oss  palette  rofilauncher  serve  silence  sw  system  tmx  wtf
.snippets/c/: assert
.snippets/go/: hello
.snippets/make/: basic
.snippets/markdown/: readme
templates/: README.md  default.nix
(+423 files in other folders)
