[project]
name = "qb"
version = "0.1.0"
description = ""
readme = ""
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.10.0",
    "pyqt6-webengine>=6.10.0",
    "qutebrowser>=3.6.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pyright>=1.1.407",
]
