cabal-version: 3.0
name: xmobar-nyx
version: 0.1.0

common base
  -- ghc-options: -Wall
  default-language: GHC2021

library xmobar-lib
  import: base
  hs-source-dirs: lib
  build-depends:
    base,
    cairo,
    pango,
    xmobar,

  exposed-modules:

executable xmobar
  import: base
  hs-source-dirs: src
  build-depends:
    base,
    xmobar,
    xmobar-lib,

  main-is: Main.hs
