cabal-version: 3.0
name:          xmonad-nyx
version:       0.1.0

common base
  default-language:   GHC2021
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    FlexibleInstances
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Werror -Wno-error=orphans -Wno-error=type-defaults
    -Wno-error=name-shadowing -Wno-error=unused-binds
    -Wno-error=unused-matches -Wno-error=unused-imports
    -Wno-error=missing-signatures -Wno-error=warnings-deprecations
    -Wno-error=incomplete-uni-patterns -threaded -funbox-strict-fields

library xmonad-lib
  import:          base
  hs-source-dirs:  lib
  build-depends:
    , base
    , containers
    , deepseq
    , flow
    , text
    , transformers
    , vector
    , X11
    , xmonad
    , xmonad-contrib
    , xmonad-extras

  exposed-modules:
    XMonad.Custom.Actions.ApplicationChooser
    XMonad.Custom.Actions.DoActions
    XMonad.Custom.Actions.DoPrompt
    XMonad.Custom.Actions.LayoutChooser
    XMonad.Custom.Actions.Minimize
    XMonad.Custom.Actions.ScratchpadChooser
    XMonad.Custom.Actions.TmuxPrompt
    XMonad.Custom.Bindings
    XMonad.Custom.Config
    XMonad.Custom.Hooks.Event
    XMonad.Custom.Hooks.Layout
    XMonad.Custom.Hooks.Log
    XMonad.Custom.Hooks.Screens
    XMonad.Custom.Hooks.Startup
    XMonad.Custom.Hooks.Statusbar
    XMonad.Custom.Manage.ManageHelpers
    XMonad.Custom.Manage.ManageHook
    XMonad.Custom.Misc
    XMonad.Custom.MouseBindings
    XMonad.Custom.Navigation
    XMonad.Custom.Prompt
    XMonad.Custom.Scratchpads
    XMonad.Custom.Search
    XMonad.Custom.Theme
    XMonad.Custom.Utils.Loggers
    XMonad.Custom.Workspaces

executable xmonad
  import:         base
  hs-source-dirs: src
  build-depends:
    , base
    , xmonad
    , xmonad-lib

  main-is:        Main.hs
